<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Work3_2_Activity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    tools:ignore="MissingConstraints">

    <EditText

        android:id="@+id/dolloar_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dolloar_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp" />

    <EditText

        android:id="@+id/euro_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/euro_work3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/won_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/won_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp" />

    <Button
        android:id="@+id/saveBtn_work3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:onClick="save"
        android:text="@string/savebtn_work3"
        android:textSize="18sp" />

</LinearLayout>